Fix: [기능] 사이드바 경로, z-index수정

--- a/src/components/sideBar/SideBar.css
+++ b/src/components/sideBar/SideBar.css
@@ -10,6 +10,7 @@
     gap: 20px;
     background-color: var(--white);
     animation: slideIn 0.5s ease-in-out;
+    z-index: 100;
 }
 
 .sideBar-header{
